fix bug for responsive on tablet

--- a/src/main/webapp/assets/sass/z-responsive-candidate.sass
+++ b/src/main/webapp/assets/sass/z-responsive-candidate.sass
@@ -1,4 +1,4 @@
-@media (min-width: 320px) and (max-width: 768px)
+@media (min-width: 320px) and (max-width: 767px)
   .body-content
     padding-bottom: 0
   .navbar
@@ -1703,7 +1703,7 @@
           ul li .select-group
             float: left
             width: 100%
-@media (min-width: 720px) and (max-width: 999px)
+@media (min-width: 768px) and (max-width: 999px)
   .techlooper-homepage
     .main-banner-block
       .main-banner-content
@@ -1736,4 +1736,44 @@
           .time-and-payment-block
             .col-md-4
               float: left
+  .header-site
+    .main-menu-job-seeker-block
+      .main-menu-job-seeker-content
+        ul
+          li
+            a
+              background: transparent !important
+              padding: 5px 0 5px 5px !important
+  .personal-site-container
+    .personal-site-content-detail
+      .job-alert-box .box-content
+        .it-job-corner-content
+          background: transparent
+          .left
+            width: 100%
+            display: inline-block
+            clear: both
+            padding-bottom: 20px
+          .right
+            width: 100%
+            clear: both
+            display: inline-block
+  .content-page-block.event-details-page
+    .content-page-detail
+      .organiser-info
+        .left-content
+          width: 15%
+        .right-content
+          width: 85%
+  .content-page-block.events-page
+    .content-page-detail
+      .events-list-block
+        .events-items
+          .events-item
+            width: 100%
+            margin: 0 20px 0 0
+
+
+
+
 
